[package]
name = "openbuildservice"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"
description = "Rust bindings for Open Build Service api"
repository = "https://github.com/portaloffreedom/rust_openbuildservice.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"